--- a/mcimbi-rsvp/backend/.env
+++ b/mcimbi-rsvp/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://Selfmade20:Selamolela1@cluster0.kzuqj.mongodb.net/Mcimbi RSVP?retryWrites=true&w=majority 
+ATLAS_URI=mongodb+srv://Selfmade20:Selamolela1@cluster0.kzuqj.mongodb.net/Mcimbi?retryWrites=true&w=majority
